<resources>
    <string name="app_name">PDF-READER_VIEWER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->

    <string name="SPLITPDF_FOLDER">Split PDFs</string>
    <!--keys for setting prefernce______________-->
    <string name="Notifications">Notifications</string>
    <string name="Show_Page_Numbers">Show_Page_Numbers</string>
    <string name="Dark_Theme">Dark Theme</string>
    <string name="Share_Application">Share_Application</string>
    <string name="Feedback">Feedback</string>
    <string name="Privacy_Policy">Privacy_Policy</string>
    <string name="Open_Source_Licences">Open_Source_Licences</string>

    <!--keys finished_____________________________-->

    <!--titles for settings prefrence_____________________________-->
    <string name="NotificationTitle">Download Notifications</string>
    <string name="Show_Page_NumbersTitle">Show Page Numbers</string>
    <string name="Dark_ThemeTitle">Dark Theme</string>
    <string name="Share_ApplicationTitle">Share Application</string>
    <string name="FeedbackTitle">Feedback</string>
    <string name="Privacy_PolicyTitle">Privacy Policy</string>
    <string name="Open_Source_LicencesTitle">Open Source Licences</string>

    <!--titles finished_____________________________-->


    <!-- Strings used for fragments for navigation -->

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>